--- a/style.css
+++ b/style.css
@@ -59,7 +59,9 @@ html{
 	background-color: var(---color-black);
 	align-items: flex-end;
 	justify-content: space-between;
-	
+/* 	760px / 24px
+	1vw = 32px    
+	    */
 }
 .blackWindow{
 	width: 80px;
@@ -92,14 +94,14 @@ html{
 }
 .bigText{
 	text-transform: capitalize;
-	font-size: 24px;
+	font-size: clamp(10px, 2.5vw, 35px);
 	font-weight: 550;
 	padding-left: 30px;
 	font-family: "Rubik", sans-serif;
 }
 .smallText{
 	width: 290px;
-	font-size: 14px;
+	font-size: clamp(8px, 2vw, 24px);
 	color: var(---color-gray);
 	padding-left: 30px;
 	font-family: "Rubik", sans-serif;
@@ -162,14 +164,14 @@ html{
 }
 .bigText2{
 	text-transform: capitalize;
-	font-size: 24px;
+	font-size: clamp(10px, 2.6vw, 35px);
 	font-weight: 500;
 	padding-left: 30px;
 	font-family: "Rubik", sans-serif;
 }
 .smallText2{
 	width: 290px;
-	font-size: 14px;
+	font-size: clamp(8px, 2vw, 24px);
 	color: var(---color-gray);
 	padding-left: 30px;
 	font-family: "Rubik", sans-serif;
@@ -198,8 +200,19 @@ html{
 	font-weight: 600;
 	font-family: "Rubik", sans-serif;
 }
-.container > img{
+.image-container{
 	position: absolute;
 	top: 0px;
 	left: 377px;
+}
+.overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: var(---color-white2);
+    font-size: 24px;
+	transform: translate(-50%, -50%) rotate(315deg); 
+	font-weight: 500;
+	font-family: "Rubik", sans-serif;
+	
 }
