--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	background-color: black
 }
 ol, ul {
 	list-style: none;
